readme -> now en netlify links

--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
   },
   "scripts": {
     "dev": "webpack-dev-server --mode development",
-    "prod": "rm -rf dist/ && webpack --mode production"
+    "prod": "rm -rf dist/ && webpack --mode production",
+    "build": "rm -rf dist/ && webpack --mode production"
   },
   "browserslist": [
     "last 2 versions",
